docs: run prettier

--- a/docs/pages/blog/pylon-1.0.mdx
+++ b/docs/pages/blog/pylon-1.0.mdx
@@ -1,8 +1,8 @@
 ---
-description: "Almost two years of development, countless hours of testing, and a lot of love and passion have gone into the creation of Pylon 1.0. We are excited to share this milestone with you and look forward to seeing how Pylon will revolutionize your GraphQL development experience."
+description: 'Almost two years of development, countless hours of testing, and a lot of love and passion have gone into the creation of Pylon 1.0. We are excited to share this milestone with you and look forward to seeing how Pylon will revolutionize your GraphQL development experience.'
 ---
 
-import Authors, { Author } from "@components/authors";
+import Authors, {Author} from '@components/authors'
 
 # Announcing Pylon 1.0
 
