--- a/docs/pages/docs/integrations/gqty.mdx
+++ b/docs/pages/docs/integrations/gqty.mdx
@@ -10,8 +10,7 @@ Pylon integrates with GQty to provide a seamless experience for developers. Whil
   playsinline=""
   loop=""
   controls=""
-  className="mt-6 rounded-xl border dark:border-zinc-800"
->
+  className="mt-6 rounded-xl border dark:border-zinc-800">
   <source src="/create-pylon-client.mp4" type="video/mp4" />
 </video>
 
