--- a/docs/pages/index.mdx
+++ b/docs/pages/index.mdx
@@ -2,6 +2,6 @@
 title: The next generation of building APIs
 ---
 
-import { Landing } from "@components/landing";
+import {Landing} from '@components/landing'
 
 <Landing />
