--- a/docs/pages/playground.mdx
+++ b/docs/pages/playground.mdx
@@ -3,6 +3,6 @@ title: Playground
 full: true
 ---
 
-import { Playground } from "@components/playground";
+import {Playground} from '@components/playground'
 
 <Playground />
