--- a/docs/pages/blog/pylon-2.0.mdx
+++ b/docs/pages/blog/pylon-2.0.mdx
@@ -1,8 +1,8 @@
 ---
-description: "Pylon v2 introduces the support for different runtimes, a new create command, and an improved development server."
+description: 'Pylon v2 introduces the support for different runtimes, a new create command, and an improved development server.'
 ---
 
-import Authors, { Author } from "@components/authors";
+import Authors, {Author} from '@components/authors'
 
 # Announcing Pylon 2.0 with Multiple Runtime Support
 
@@ -39,8 +39,7 @@ Watch how we use the new `npm create pylon` command to create a new Pylon projec
   playsinline=""
   loop=""
   controls=""
-  className="mt-6 rounded-xl border dark:border-zinc-800"
->
+  className="mt-6 rounded-xl border dark:border-zinc-800">
   <source src="/create-pylon-cf.mp4" type="video/mp4" />
 </video>
 
