--- a/docs/pages/docs/release-notes/v2.0.mdx
+++ b/docs/pages/docs/release-notes/v2.0.mdx
@@ -30,7 +30,7 @@ Watch how we use the new `npm create pylon` command to create a new Pylon projec
   loop=""
   controls=""
   className="mt-6 rounded-xl border dark:border-zinc-800">
-  <source src="/create-pylon-cf.mp4" type="video/mp4" />
+  <source src="/create-pylon-cf-deploy.mp4" type="video/mp4" />
 </video>
 
 ## New Runtimes
